Another try at fixing the contrast, last try

--- a/FinalProject/css/style.css
+++ b/FinalProject/css/style.css
@@ -87,5 +87,6 @@ footer{
     opacity: .8;
     text-shadow: rgba(0,0,0,0.9) 0px 0px 5px;
     color: white;
-    align-content:end;
+    text-align: right;
+    align-content: end;
 }
